# KlasifikasiSampah

./: .gitignore  Cargo.toml  LICENSE.md  README.md  docker-compose-dev.yml  index.js  package-lock.json  package.json  test.js  test2.js
android/KSO/: build.gradle.kts  settings.gradle.kts
android/KSO/app/: build.gradle.kts  google-services.json
android/KlasifikasiSampah/: build.gradle
android/KlasifikasiSampah/app/: build.gradle
android/SKSO/: settings.gradle.kts
android/SKSO/app/: build.gradle.kts
android/TesKlasifikasiSampah/: settings.gradle.kts
android/TesKlasifikasiSampah/app/: build.gradle.kts
android/archived/KlasifikasiSampah/: settings.gradle
android/sistem_klasifikasi_sampah_otomatis/: README.md  pubspec.yaml
iot/SistemKlasifikasiSampahOtomatis/: Base64.cpp  SistemKlasifikasiSampahOtomatis.ino
iot/develop/: static-buffer.ino
machine learning/notebooks/: klasifikasi_jenis_bahan_penyusun_sampah.ipynb  klasifikasi_sampah.ipynb
ml/dataset/: kategori_sampah.sh  rename-all.sh
ml/notebooks/: .gitignore  Makefile  klasifikasi_jenis_sampah_dengan_cnn.ipynb  klasifikasi_jenis_sampah_dengan_inception.ipynb  klasifikasi_jenis_sampah_dengan_inceptionv3.ipynb  klasifikasi_jenis_sampah_dengan_xception.ipynb  requirements.txt
ml/py/: klasifikasi_jenis_sampah_dengan_cnn.py  klasifikasi_jenis_sampah_dengan_inception.py  klasifikasi_jenis_sampah_dengan_xception.py
src/: db_connections.rs  main.rs
src/handlers/: products.rs
src/models/: product.rs
web/klasifikasi-sampah/: package-lock.json  package.json  tailwind.config.js
(+280 files in other folders)
